--- a/lightbox.html
+++ b/lightbox.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Lightbox</title>
 		<style>
-			html, body {margin:0;padding:0;border:0;background:#ccf;font-family:sans-serif;}
+			html, body {margin:0;padding:0;border:0;background:#ffc;font-family:sans-serif;}
 			ul, li {margin:0;padding:0;border:0;display:block;}
 			li {padding:5px 0 0 5px;float:left;}
 			a img {border:0;}
@@ -22,7 +22,17 @@
 			.LBwrapper .LBcontent.withText .LBabout {position:absolute;bottom:0;left:0;right:0;padding:10px 0;margin:0 10px;line-height:20px;text-align:left;height:20px;white-space:nowrap;text-overflow:ellipsis;overflow:hidden;}
 			
 			.LBwrapper .LBcontent.withDownload .LBabout {padding-right:5em;}
-			.LBwrapper .LBcontent.withDownload .LBdownload {position:absolute;bottom:0;right:10px;padding:10px 0;line-height:20px;font-size:12px;text-transform:uppercase;}
+			.LBwrapper .LBcontent.withDownload .LBdownload {position:absolute;bottom:10px;right:10px;padding:.25em .5em;text-transform:uppercase;color:#222;font-size:.625em;line-height:1.5;background:#ccc;color:#222;text-decoration:none;font-weight:bold;cursor:pointer;
+				-webkit-border-radius:2px;-webkit-box-shadow:0 0 1px #000;
+				-moz-border-radius:2px;-moz-box-shadow:0 0 1px #000;
+				border-radius:2px;box-shadow:0 0 1px #000;
+			}
+			
+			.LBwrapper .LBclose {position:absolute;right:5px;top:5px;display:block;padding:.25em .5em;background:#fff;color:#222;text-decoration:none;text-transform:uppercase;font-weight:bold;font-size:.625em;line-height:1.5;cursor:pointer;
+				-webkit-border-radius:2px;
+				-moz-border-radius:2px;
+				border-radius:2px;
+			}
 		</style>
 	</head>
 	<body>
@@ -181,11 +191,63 @@
 				};
 			return p;
 		}());*/
-		/*
-		LightBox object
-		*/
+		/**
+		 * Simple events
+		 **/
+		var CustEv = (function () {
+			function createEvent(type) {
+				return (r = {
+					'type': type,
+					'stopPropagation': function () {
+						r.stop = true;
+					},
+					'stop': false
+				});
+			}
+			return function () {
+				var store = {};
+				return {
+					'on': function (type, handler, data) {
+						if (!store[type]) store[type] = [[handler, data]];
+						else store[type].push([handler, data]);
+					},
+					'off': function (type, handler) {
+						if (!handler) {
+							return !!(store[type] = []);
+						}
+						var i = store[type] && store[type].length || -1;
+						for (; i >= 0; i -= 1) {
+							if (store[type][i][0] === handler) {
+								store[type].splice(i, 1);
+								return true;
+							}
+						}
+						return false;
+					},
+					'fire': function (type, data) {
+						var i = 0,
+							l = store[type] && store[type].length || 0,
+							ev = createEvent(type),
+							d;
+						for (; i < l; i += 1) {
+							try {
+								ev.data = store[type][i][1];
+								store[type][i][0].apply(this, [ev].concat(data || []));
+							} catch (e) {}
+							if (ev.stop) {
+								break;
+							}
+						}
+					}
+				};
+			}
+		}());
+		/**
+		 * LightBox object
+		 **/
 		var LightBox = (function () {
-			var LB = function (thumbs, conf) {
+			var doc = document,
+				LB = function (thumbs, conf) {
 					var i;
 					if (this === window) {
 						i = new LB(thumbs, conf);
@@ -217,7 +279,7 @@
 							args = args.concat(addArgs || []);
 							handler.apply(scope || this, args);
 						};
-						el.addEventListener(type, handler.__handler__);
+						el.addEventListener(type, handler.__handler__, false);
 						return el;
 					},
 					'off': function (el, type, handler) {
@@ -263,7 +325,6 @@
 					},
 					'openWrapperClick': function (ev) {
 						var target = ev.target || ev.srcElement;
-						console.log(ev, target, this.conf.wrapperClass);
 						if (b.hasClass(target, this.conf.wrapperClass)) {
 							this.close();
 						}
@@ -283,80 +344,73 @@
 				"helpers": b
 			});
 			
-			//!-- remove in production
-			var reqs = ["setupLink", "setupContent", "open", "close", "showContent", "hideContent"],
-				f = function (name) {
-					return function () {throw Error("Missing a required function: " + name);};
+			b.extend(LB.prototype, {
+				/**
+				 * Sets up and returns the link that handles the LightBox events
+				 **/
+				setupLink: function (idx) {
+					var link = this.thumbs[idx].parentNode;
+					b.on(link, 'click', e.linkClick, this, [idx]);
+					return link;
 				},
-				i = 0, j = 0;
-			for (i = 0, j = reqs.length; i < j; i++) {
-				LB.prototype[reqs[i]] = f(reqs[i]);
-			}
-			//-- end remove
-			
-			/**
-			 * Sets up and returns the link that handles the LightBox events
-			 **/
-			LB.prototype.setupLink = function (idx) {
-				var link = this.thumbs[idx].parentNode;
-				b.on(link, 'click', e.linkClick, this, [idx]);
-				return link;
-			};
-			/**
-			 * Should produce the HTML of the enlarged content & append it to the doc
-			 **/
-			LB.prototype.setupContent = function () {
-				var wrapper = this.content || document.createElement('div'),
-					content = document.createElement('div'),
-					img = document.createElement('img'),
-					link = this.links[this.selectedIndex],
-					thumb = this.thumbs[this.selectedIndex],
-					src = link.dataset && link.dataset.big || link.href,
-					title = thumb.title || '',
-					alt = thumb.alt || '';
-				wrapper.className = this.conf.wrapperClass;
-				wrapper.innerHTML = ''; // clean up the content
-				content.className = this.conf.contentClass;
-				b.on(img, 'load', e.imageLoad, this);
-				b.extend(img, {
-					'src': src,
-					'title': title,
-					'alt': alt
-				});
-				b.on(wrapper, 'click', e.openWrapperClick, this);
-				b.append(content, img);
-				b.append(wrapper, content);
-				this.content = wrapper;
-			};
-			/**
-			 * Called when you want the lightbox to open
-			 **/
-			LB.prototype.open = function () {
-				this.showContent();
-				this.state = 1;
-			};
-			/**
-			 * Called when you want the lightbox to close
-			 **/
-			LB.prototype.close = function () {
-				this.hideContent();
-				this.state = 0;
-			};
-			/**
-			 * Should show the content or set it up if it's not present
-			 **/
-			LB.prototype.showContent = function () {
-				if (!this.content) {
-					this.setupContent();
+				/**
+				 * Should produce the HTML of the enlarged content & append it to the doc
+				 **/
+				setupContent: function () {
+					var wrapper = this.content || doc.createElement('div'),
+						content = doc.createElement('div'),
+						img = doc.createElement('img'),
+						link = this.links[this.selectedIndex],
+						thumb = this.thumbs[this.selectedIndex],
+						src = link.dataset && link.dataset.big || link.href,
+						title = thumb.title || '',
+						alt = thumb.alt || '';
+					b.extend(wrapper, {
+						className: this.conf.wrapperClass,
+						innerHTML: '' // clean up the content
+					});
+					content.className = this.conf.contentClass;
+					b.on(img, 'load', e.imageLoad, this);
+					b.extend(img, {
+						'src': src,
+						'title': title,
+						'alt': alt
+					});
+					b.on(wrapper, 'click', e.openWrapperClick, this);
+					b.append(content, img);
+					b.append(wrapper, content);
+					this.content = wrapper;
+				},
+				/**
+				 * Called when you want the lightbox to open
+				 **/
+				open: function () {
+					this.showContent();
+					this.state = 1;
+				},
+				/**
+				 * Called when you want the lightbox to close
+				 **/
+				close: function () {
+					this.hideContent();
+					this.state = 0;
+				},
+				/**
+				 * Should show the content or set it up if it's not present
+				 **/
+				showContent: function () {
+					if (!this.content) {
+						this.setupContent();
+					}
+					b.append(doc.body, this.content);
+				},
+				/**
+				 * Should hide the elarged content
+				 **/
+				hideContent: function () {
+					b.detach(this.content);
 				}
-				b.append(document.body, this.content);
-			};
-			/**
-			 * Should hide the elarged content
-			 **/
-			LB.prototype.hideContent = function () {
-				b.detach(this.content);
-			};
+			});
 			
 			/* OPTIONAL: cleaner */
 			LB.clean = function () {
@@ -404,7 +458,7 @@
 					open.apply(this, arguments)
 					b.on(document, 'keyup', e.openEscape, this);
 				}
-			}
+			};
 		});
 
 		// display title 
@@ -427,11 +481,11 @@
 						co.appendChild(ab);
 					}
 				}
-			}
+			};
 		});
 		
 		// display download link 
-		LightBox.extend(function (LB, b) {
+		LightBox.extend(function (LB) {
 			var b = LB.helpers,
 				setupContent = LB.prototype.setupContent;
 			b.extend(LB.defaults, {'downloadClass': 'LBdownload'});
@@ -439,16 +493,20 @@
 				"setupContent": function () {
 					setupContent.apply(this, arguments);
 					var co = this.content.getElementsByClassName(this.conf.contentClass)[0],
-						ab = document.createElement('div'),
+						ab = document.createElement('a'),
 						link = this.links[this.selectedIndex],
 						href = link.dataset && link.dataset.download || link.href;
 					b.addClass(co, 'withText');
 					b.addClass(co, 'withDownload');
-					ab.className = this.conf.downloadClass;
-					ab.innerHTML = '<a href="' + href + '">Download</a>';
+					b.extend(ab, {
+						className: this.conf.downloadClass,
+						href: href,
+						target: '_blank',
+						innerHTML: 'Download'
+					})
 					co.appendChild(ab);
 				}
-			}
+			};
 		});
 		
 		// keyboard next/previous controls 
@@ -479,14 +537,40 @@
 						b.on(document, 'keyup', e.openNextPrevious, this);
 					}
 				}
+			};
+		});
+		
+		// display close link up top
+		LightBox.extend(function (LB) {
+			var b = LB.helpers,
+				e = LB.handlers,
+				setupContent = LB.prototype.setupContent;
+			b.extend(LB.defaults, {'closeClass': 'LBclose'});
+			b.extend(e, {
+				'closeButton': function (ev) {
+					this.close();
+				}
+			});
+			return {
+				"setupContent": function () {
+					setupContent.apply(this, arguments);
+					var co = this.content,
+						cl = document.createElement('a');
+					b.extend(cl, {
+						className: this.conf.closeClass,
+						innerHTML: 'Close'
+					});
+					co.appendChild(cl);
+					b.on(cl, 'click', e.closeButton, this);
+				}
 			}
 		});
 		
-		var list = document.querySelectorAll(".lb img"),
+		LightBox(document.querySelectorAll(".lb img"));
+		/*var list = document.querySelectorAll(".lb img"),
 			i = 0, j = 0;
-		LightBox(list);
 		for (j = list.length; i < j; i++) {
-			//LightBox([list[i]]);
-		}
+			LightBox([list[i]]);
+		}*/
 	</script>
 </html>
